<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bot Wars</string>
    <string name="menu_resume">Resume Game</string>
    <string name="menu_pause">Pause Game</string>
    <string name="menu_return">Return to Main Menu</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_restart">Restart</string>
    <string name="sm_toptext">Main Menu</string>
    <string name="sm_veloc">Velocity</string>
    <string name="sm_impul">Impulse</string>
    <string name="sm_map">Map</string>
    
    <!--   StartMenu -->
    <string name="str_startmenu_title">BoT WaRs</string>
    <string name="str_startmenu_start">SINGLE PLAYER</string>
    <string name="str_startmenu_settings">SETTINGS</string>
    <string name="str_startmenu_quick">MULTIPLAYER</string>
    <string name="str_startmenu_about">ABOUT</string>
    <string name="str_startmenu_exit">EXIT</string>

    
    
    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    
    <string-array name="maps_array">
        <item>Map 1</item>
        <item>Map 2</item>
        <item>Map 3</item>
    </string-array>
    <string-array name="scene_array">
        <item>Sunny</item>
        <item>Dark</item>
        <item>Island</item>
        <item>Underground</item>
    </string-array>

    <string name="sm_mapprompt">Choose A Map</string>
    <string name="sm_scene">Scene</string>
    <string name="sm_sceneprompt">Choose A Scene</string>
    
    <!--  SettingsMenu -->
    
    <string name="str_settingsmenu_music">Music</string>
    <string name="str_settingsmenu_sound">Sound</string>
    <string name="str_settingsmenu_volume">Volume</string>
    <string name="str_settingsmenu_playervelocity">Player Velocity</string>
    <string name="str_settingsmenu_playerimpulse">Player Jump Height</string>
    <string name="str_settingsmenu_save">SAVE</string>

</resources>